--- a/templates/developer.html
+++ b/templates/developer.html
@@ -77,12 +77,30 @@
                             <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/abhinav-kumar-a78669198/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="img-text">
                     <h4>Abhinav</h4>
+                    <h5>Developer</h5>
+                </div>
+            </div>
+        </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="single-team">
+                    <div class="img-area">
+                        <img src="static/images/Vaibhav.jpeg" class="img-responsive" alt="">
+                        <div class="social">
+                            <ul class="list-inline">
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/vaibhav-katiyar-4402b01a3/"><i class="fa fa-linkedin"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="img-text">
+                    <h4>Rituraj</h4>
                     <h5>Developer</h5>
                 </div>
             </div>
