--- a/templates/developer.html
+++ b/templates/developer.html
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="img-text">
-                    <h4>Rituraj</h4>
+                    <h4>Vaibhav</h4>
                     <h5>Developer</h5>
                 </div>
             </div>
