--- a/templates/developer.html
+++ b/templates/developer.html
@@ -7,59 +7,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Employee Burnout Prediction</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap"
+          rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.6.2/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="static/css/developer.css">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
 
-    <header>
-        <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="{{url_for('home')}}"> BURNOUT</a>
-                </div>
+<header>
+    <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{url_for('home')}}"> BURNOUT</a>
+            </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="{{url_for('signs')}}">Signs</a></li>
-                        <li><a href="{{url_for('about_page')}}">About</a></li>
-                        <li><a href="{{url_for('employee_info')}}">Check Employee Burnout</a></li>
-                        <li><a href="{{url_for('prevent')}}">Prevention</a></li>
-                        <li><a href="{{url_for('developers')}}">Developers</a></li>
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{{url_for('signs')}}">Signs</a></li>
+                    <li><a href="{{url_for('about_page')}}">About</a></li>
+                    <li><a href="{{url_for('employee_info')}}">Check Employee Burnout</a></li>
+                    <li><a href="{{url_for('prevent')}}">Prevention</a></li>
+                    <li><a href="{{url_for('developers')}}">Developers</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
 
-    </header>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="container team-area" data-aos-duration="1000">
-        <div class="row">
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-team">
-                    <div class="img-area">
-                        <img src="static/images/Rituraj.jpeg" class="img-responsive" alt="">
-                        <div class="social">
-                            <ul class="list-inline">
+</header>
+<br>
+<br>
+<br>
+<br>
+<div class="container team-area" data-aos-duration="1000">
+    <div class="row">
+        <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="single-team">
+                <div class="img-area">
+                    <img src="static/images/Rituraj.jpeg" class="img-responsive" alt="">
+                    <div class="social">
+                        <ul class="list-inline">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/ritu-raj-293a4b16a/"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/ritu-raj-293a4b16a/"><i class="fa fa-linkedin"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -69,48 +72,11 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-team">
-                    <div class="img-area">
-                        <img src="static/images/abhinav.jpeg" class="img-responsive" alt="">
-                        <div class="social">
-                            <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/abhinav-kumar-a78669198/"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="img-text">
-                    <h4>Abhinav</h4>
-                    <h5>Developer</h5>
-                </div>
-            </div>
-        </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-team">
-                    <div class="img-area">
-                        <img src="static/images/Vaibhav.jpeg" class="img-responsive" alt="">
-                        <div class="social">
-                            <ul class="list-inline">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/vaibhav-katiyar-4402b01a3/"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="img-text">
-                    <h4>Vaibhav</h4>
-                    <h5>Developer</h5>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
-</div>
-        <p class="slogan">&copyErrorCode~All Rights Reserved</p>
+<p class="slogan">&copyErrorCode~All Rights Reserved</p>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
